<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Water18</string>

    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="verification_code">Verification Code</string>

    <string name="phone_number_confirmation_text">We have sent a verification code via SMS.Please enter the code in the input above and confirm your number</string>

    <string name="login">Login</string>
    <string name="login_with_google">Login with Google</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="sign_up">Sign Up</string>
    <string name="submit">Submit</string>
    <string name="confirm">Confirm</string>
    <string name="resend">Resend Code</string>

    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="edit_profile">Edit Profile</string>

    <string name="user">User</string>
    <string name="cart">Cart</string>
    <string name="order">Order</string>
    <string name="stock_list">Stock List</string>
    <string name="current_order">Current Order</string>
    <string name="sign_out">Sign Out</string>

    <string name="change_password">Change Password</string>

    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="product_control">Product Control</string>
    <string name="add_item">Add Item</string>

    <string name="total_price">Total Price</string>
    <string name="checkout">Checkout</string>
    <string name="place_order">Place Order</string>
    <string name="chat_admin">Chat Admin</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="chat">Chat</string>
    <string name="mark_as_read">Mark as Read</string>
    <string name="finish_order">Finish Order</string>
    <string name="track">Track</string>
    <string name="start_tracking">Start tracking</string>

    <string name="logo_desc">app logo</string>
    <string name="facebook_app_id">232840567417687</string>

    <string name="fb_login_protocol_scheme">fb232840567417687</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_navigation">NavigationActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="transaction_date">Transaction Date</string>
    <string name="customer_order">Customer Order</string>

    <string name="title_activity_display_tracker">Map</string>
</resources>
