<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_cart"
            android:title="@string/cart"/>
        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/ic_order"
            android:title="@string/order" />
        <item
            android:id="@+id/nav_current_order"
            android:icon="@drawable/ic_order"
            android:title="@string/current_order" />
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_exit"
            android:title="@string/sign_out" />
    </group>
</menu>