<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightBlueBackground"
    tools:context=".activity.AdminMainActivity">

    <LinearLayout
        android:id="@+id/layout_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/layout_address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_pn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="17dp"
                android:layout_marginTop="5dp"
                android:text="@string/phone_number"
                android:textColor="@color/colorBlack"
                android:textSize="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="5dp"
                android:text="@string/phone_number"
                android:textColor="@color/colorBlack"
                android:textSize="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/txt_pn"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/btn_mark_as_read"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_addr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                android:text="@string/address"
                android:textColor="@color/colorBlack"
                android:textSize="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="70dp"
                android:layout_marginTop="5dp"
                android:text="@string/phone_number"
                android:textColor="@color/colorBlack"
                android:textSize="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/txt_addr"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_header"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txt_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/name"
            android:textColor="@color/colorBlack"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/txt_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/price"
            android:textColor="@color/colorBlack"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/txt_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/quantity"
            android:textColor="@color/colorBlack"
            android:textSize="20dp" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/list"
        android:name="edu.bluejack17_2.water18.fragment.admin.TransactionAdminFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="19dp"
        android:layout_marginTop="50dp"
        app:layoutManager="LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/linear_layout_total_price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/layout_header"
        app:layout_constraintVertical_bias="0.0"
        tools:context=".fragment.admin.TransactionAdminFragment"
        tools:listitem="@layout/item_transaction_admin_view">

    </android.support.v7.widget.RecyclerView>

    <Button
        android:id="@+id/btn_mark_as_read"
        android:layout_width="357dp"
        android:layout_height="41dp"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:background="@color/blueBackground"
        android:text="@string/mark_as_read"
        app:layout_constraintBottom_toTopOf="@+id/btn_chat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_chat"
        android:layout_width="357dp"
        android:layout_height="41dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:background="@color/blueBackground"
        android:text="@string/chat"
        app:layout_constraintBottom_toTopOf="@+id/btn_finish_order"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_finish_order"
        android:layout_width="357dp"
        android:layout_height="41dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:background="@color/blueBackground"
        android:text="@string/finish_order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linear_layout_total_price"
        android:layout_width="368dp"
        android:layout_height="33dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@color/blueBackground"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/layout_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txt_total_price_title"
                android:layout_width="108dp"
                android:layout_height="24dp"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:text="@string/total_price"
                android:textColor="@color/colorBlack"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_total_price"
                android:layout_width="108dp"
                android:layout_height="24dp"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="120dp"
                android:layout_weight="1"
                android:text="@string/total_price"
                android:textColor="@color/colorBlack"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/txt_total_price_title"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>