<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.PhoneVerificationActivity"
    android:background="@color/white_background">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tf_layout_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="134dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/tfVerificationCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white_background"
            android:ems="10"
            android:hint="@string/placeholder_verification_code"
            android:inputType="phone"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="44dp" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="298dp"
        android:layout_height="69dp"
        android:layout_marginEnd="51dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="15dp"
        android:text="@string/phone_number_confirmation_text"
        android:textColor="@color/colorBlack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tf_layout_phone" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="270dp"
        android:layout_height="51dp"
        android:layout_marginEnd="79dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="21dp"
        android:background="@color/light_blue_background"
        android:text="@string/confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btnResend"
        android:layout_width="270dp"
        android:layout_height="51dp"
        android:layout_marginBottom="230dp"
        android:layout_marginEnd="79dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="22dp"
        android:background="@color/light_blue_background"
        android:text="@string/resend"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

</android.support.constraint.ConstraintLayout>