<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.AddItemFragment">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blueBackground">

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="379dp"
            android:layout_marginBottom="69dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="119dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/whiteBackground">

                <Button
                    android:id="@+id/btn_submit"
                    android:layout_width="270dp"
                    android:layout_height="0dp"
                    android:layout_marginBottom="7dp"
                    android:layout_marginEnd="140dp"
                    android:layout_marginStart="140dp"
                    android:layout_marginTop="142dp"
                    android:layout_weight="1"
                    android:background="@color/lightBlueBackground"
                    android:text="@string/submit"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tf_layout_quantity" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tf_layout_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="137dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <EditText
                        android:id="@+id/tf_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/name"
                        android:inputType="textPersonName" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tf_layout_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="137dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tf_layout_name">

                    <EditText
                        android:id="@+id/tf_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/price"
                        android:inputType="numberSigned" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tf_layout_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginEnd="137dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tf_layout_price">

                    <EditText
                        android:id="@+id/tf_quantity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/quantity"
                        android:inputType="numberSigned" />
                </android.support.design.widget.TextInputLayout>

            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>
    </android.support.constraint.ConstraintLayout>
</FrameLayout>